--- a/src/variables/classes/_hu-border-color.scss
+++ b/src/variables/classes/_hu-border-color.scss
@@ -1,13 +1,5 @@
-$hu-border-color-modules: (base) !default;
+$hu-border-color-modules: $hu-border-modules !default;
 
-$hu-border-color-sides: (
-  border: border,
-  border-b: border-bottom,
-  border-l: border-left,
-  border-r: border-right,
-  border-t: border-top,
-  border-h: (border-left, border-right),
-  border-v: (border-bottom, border-top),
-) !default;
+$hu-border-color-sides: $hu-border-sides !default;
 
 $hu-border-color-types: $hu-colors !default;
