--- a/src/variables/classes/_hu-border-width.scss
+++ b/src/variables/classes/_hu-border-width.scss
@@ -1,14 +1,6 @@
-$hu-border-width-modules: (base) !default;
+$hu-border-width-modules: $hu-border-modules !default;
 
-$hu-border-width-sides: (
-  border: border,
-  border-b: border-bottom,
-  border-l: border-left,
-  border-r: border-right,
-  border-t: border-top,
-  border-h: (border-left, border-right),
-  border-v: (border-bottom, border-top),
-) !default;
+$hu-border-width-sides: $hu-border-sides !default;
 
 $hu-border-width-types: (
   0: 0,
