--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -37,8 +37,8 @@
 @import "hu-overflow-y";
 @import "hu-overscroll";
 @import "hu-padding";
-@import "hu-pin";
 @import "hu-pointer-events";
+@import "hu-pos";
 @import "hu-position";
 @import "hu-scroll-behavior";
 @import "hu-svg-fill-color";
