--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -18,6 +18,7 @@
 @import "hu-flex-shrink";
 @import "hu-flex-wrap";
 @import "hu-font-family";
+@import "hu-font-smoothing";
 @import "hu-font-size";
 @import "hu-font-weight";
 @import "hu-height";
