--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -18,6 +18,7 @@
 @import "hu-flex-wrap";
 @import "hu-font-family";
 @import "hu-font-size";
+@import "hu-font-smoothing";
 @import "hu-font-weight";
 @import "hu-height";
 @import "hu-justify-content";
