--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -1,6 +1,7 @@
 @import "hu-align-content";
 @import "hu-align-items";
 @import "hu-align-self";
+@import "hu-appearance";
 @import "hu-backface";
 @import "hu-bg-color";
 @import "hu-blend-mode";
