--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -4,6 +4,7 @@
 @import "hu-appearance";
 @import "hu-backface";
 @import "hu-bg-color";
+@import "hu-bg-repeat";
 @import "hu-blend-mode";
 @import "hu-border";
 @import "hu-border-color";
