--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -5,6 +5,7 @@
 @import "hu-backface";
 @import "hu-bg-color";
 @import "hu-bg-repeat";
+@import "hu-bg-size";
 @import "hu-blend-mode";
 @import "hu-border-color";
 @import "hu-border-radius";
