--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -4,6 +4,8 @@
 @import "hu-appearance";
 @import "hu-backface";
 @import "hu-bg-color";
+@import "hu-bg-position-x";
+@import "hu-bg-position-y";
 @import "hu-bg-repeat";
 @import "hu-bg-size";
 @import "hu-blend-mode";
