set position to be responsive by default. remove duplicate button reset

--- a/src/variables/classes/_hu-position.scss
+++ b/src/variables/classes/_hu-position.scss
@@ -1,4 +1,4 @@
-$hu-position-modules: (base, hocus, group-hover, group-state, state) !default;
+$hu-position-modules: (base, hocus, group-hover, group-state, responsive, state) !default;
 
 $hu-position-types: (
   absolute,
