--- a/src/classes/_hu-border-color.scss
+++ b/src/classes/_hu-border-color.scss
@@ -15,7 +15,7 @@
   }
 }
 
-@if index($hu-border-color-modules, responsive) {
+@if (index($hu-border-color-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $hue, $colors in $hu-border-color-types {
