--- a/src/classes/_hu-pointer-events.scss
+++ b/src/classes/_hu-pointer-events.scss
@@ -11,7 +11,7 @@
 }
 
 
-@if index($hu-pointer-events-modules, responsive) {
+@if (index($hu-pointer-events-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $type, $value in $hu-pointer-events-types {
