--- a/src/classes/_hu-pos.scss
+++ b/src/classes/_hu-pos.scss
@@ -13,7 +13,7 @@
   }
 }
 
-@if index($hu-pos-modules, responsive) {
+@if (index($hu-pos-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $scale, $value in $hu-pos-scale {
