--- a/src/classes/_hu-visually-hidden.scss
+++ b/src/classes/_hu-visually-hidden.scss
@@ -18,7 +18,7 @@
   }
 }
 
-@if index($hu-visually-hidden-modules, responsive) {
+@if (index($hu-visually-hidden-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $type, $value in $hu-visually-hidden-types {
