--- a/src/classes/_hu-font-smoothing.scss
+++ b/src/classes/_hu-font-smoothing.scss
@@ -11,7 +11,7 @@
   }
 }
 
-@if index($hu-font-smoothing-modules, responsive) {
+@if (index($hu-font-smoothing-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $type, $value in $hu-font-smoothing-types {
