--- a/src/classes/_hu-momentum-scrolling.scss
+++ b/src/classes/_hu-momentum-scrolling.scss
@@ -9,7 +9,7 @@
   }
 }
 
-@if index($hu-momentum-scrolling-modules, responsive) {
+@if (index($hu-momentum-scrolling-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $type, $value in $hu-momentum-scrolling-types {
