--- a/src/classes/_hu-overflow-y.scss
+++ b/src/classes/_hu-overflow-y.scss
@@ -10,7 +10,7 @@
   }
 }
 
-@if index($hu-overflow-y-modules, responsive) {
+@if (index($hu-overflow-y-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $type, $value in $hu-overflow-y-types {
