--- a/src/classes/_hu-padding.scss
+++ b/src/classes/_hu-padding.scss
@@ -12,7 +12,7 @@
   }
 }
 
-@if index($hu-padding-modules, responsive) {
+@if (index($hu-padding-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $scale, $value in $hu-padding-scale {
