--- a/src/classes/_hu-position.scss
+++ b/src/classes/_hu-position.scss
@@ -11,7 +11,7 @@
 }
 
 
-@if index($hu-position-modules, responsive) {
+@if (index($hu-position-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $type, $value in $hu-position-types {
