--- a/src/classes/_hu-svg-fill-color.scss
+++ b/src/classes/_hu-svg-fill-color.scss
@@ -12,7 +12,7 @@
   }
 }
 
-@if index($hu-svg-fill-color-modules, responsive) {
+@if (index($hu-svg-fill-color-modules, responsive)) {
   @each $bp-scale, $bp-value in $hu-breakpoints {
     @media (min-width: $bp-value) {
       @each $hue, $colors in $hu-svg-fill-color-types {
