Separated responsive parent & pseudo to own mixin. Removed unused generic arg

--- a/src/classes/_hu-align-items.scss
+++ b/src/classes/_hu-align-items.scss
@@ -4,7 +4,7 @@
     $property: align-items;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-align-items-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
