--- a/src/classes/_hu-bg-position-x.scss
+++ b/src/classes/_hu-bg-position-x.scss
@@ -4,7 +4,7 @@
     $property: background-position-x;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-bg-position-x-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
