--- a/src/classes/_hu-pointer-events.scss
+++ b/src/classes/_hu-pointer-events.scss
@@ -4,7 +4,7 @@
     $property: pointer-events;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-pointer-events-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
