--- a/src/classes/_hu-scroll-behavior.scss
+++ b/src/classes/_hu-scroll-behavior.scss
@@ -4,7 +4,7 @@
     $property: scroll-behavior;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-scroll-behavior-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
