--- a/src/classes/_hu-svg-fill-rule.scss
+++ b/src/classes/_hu-svg-fill-rule.scss
@@ -5,7 +5,7 @@
     $property: fill-rule;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-svg-fill-rule-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
