--- a/src/classes/_hu-table-layout.scss
+++ b/src/classes/_hu-table-layout.scss
@@ -4,7 +4,7 @@
     $property: table-layout;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-table-layout-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
