--- a/src/classes/_hu-transition-duration.scss
+++ b/src/classes/_hu-transition-duration.scss
@@ -4,7 +4,7 @@
     $property: transition-duration;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-transition-duration-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
