--- a/src/classes/_hu-truncate-text.scss
+++ b/src/classes/_hu-truncate-text.scss
@@ -2,7 +2,7 @@
   @each $type, $properties in $hu-truncate-text-types {
     $class-name: hu-class-name(#{$type});
 
-    @include hu-generic($class-name, $module, $hu-truncate-text-modules) {
+    @include hu-generic($class-name, $module) {
       @each $property, $value in $properties {
         #{$property}: $value;
       }
