--- a/src/mixins/_hu-generic.scss
+++ b/src/mixins/_hu-generic.scss
@@ -1,4 +1,4 @@
-@mixin hu-generic($class-name, $modules, $raw-modules) {
+@mixin hu-generic($class-name, $modules) {
   $modules: hu-format-modules($modules);
 
   @each $module in $modules {
