--- a/src/mixins/_hu-pseudo.scss
+++ b/src/mixins/_hu-pseudo.scss
@@ -1,7 +1,5 @@
-@mixin hu-pseudo($class-name, $pseudos, $modules: (base)) {
-  $modules: hu-format-modules($modules);
-
-  @each $module in $modules {
+@mixin hu-pseudo($class-name, $pseudos, $modules) {
+  @each $module in hu-format-modules($modules) {
     @each $pseudo in $pseudos {
       $pseudo-class-name: #{pseudo}-#{hu-string-replace($pseudo, ":", "")};
 
@@ -67,36 +65,6 @@
           .print-#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
             @include hu-bump-specificity {
               @content;
-            }
-          }
-        }
-      }
-    }
-  }
-
-  @if (index($modules, responsive)) {
-    @each $bp-scale, $bp-value in $hu-breakpoints {
-      @media (min-width: $bp-value) {
-        @each $pseudo in $pseudos {
-          $pseudo-class-name: #{pseudo}-#{hu-string-replace($pseudo, ":", "")};
-
-          .bp-#{$bp-scale}-#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
-            @content;
-          }
-
-          @if (index($modules, state)) {
-            @each $state in $hu-states {
-              .#{$state}.bp-#{$bp-scale}-#{$state}-#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
-                @content;
-              }
-            }
-          }
-
-          @if (index($modules, group-state)) {
-            @each $state in $hu-states {
-              .group.#{$state} .group__bp-#{$bp-scale}-#{$state}-#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
-                @content;
-              }
             }
           }
         }
