--- a/src/mixins/_index.scss
+++ b/src/mixins/_index.scss
@@ -5,8 +5,10 @@
 @import "hu-group-state";
 @import "hu-hocus";
 @import "hu-parent";
+@import "hu-parent-responsive";
 @import "hu-print";
 @import "hu-pseudo";
+@import "hu-pseudo-responsive";
 @import "hu-reduced-motion";
 @import "hu-responsive";
 @import "hu-responsive-base";
