--- a/src/classes/_hu-align-content.scss
+++ b/src/classes/_hu-align-content.scss
@@ -4,7 +4,7 @@
     $property: align-content;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-align-content-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
