--- a/src/classes/_hu-align-self.scss
+++ b/src/classes/_hu-align-self.scss
@@ -4,7 +4,7 @@
     $property: align-self;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-align-self-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
