--- a/src/classes/_hu-backface.scss
+++ b/src/classes/_hu-backface.scss
@@ -5,7 +5,7 @@
     $property: backface-visibility;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-backface-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
