--- a/src/classes/_hu-border-color.scss
+++ b/src/classes/_hu-border-color.scss
@@ -5,7 +5,7 @@
         $side-properties: if($side-properties, $side-properties, $side-type);
         $class-name: hu-class-name(#{$side-type}-color-#{$hue}-#{$color-scale});
 
-        @include hu-generic($class-name, $module, $hu-border-color-modules) {
+        @include hu-generic($class-name, $module) {
           @each $property in $side-properties {
             #{$property}-color: $color-value;
           }
