--- a/src/classes/_hu-color.scss
+++ b/src/classes/_hu-color.scss
@@ -4,7 +4,7 @@
       $class-name: hu-class-name(color-#{$hue}-#{$scale});
       $property: color;
 
-      @include hu-generic($class-name, $module, $hu-color-modules) {
+      @include hu-generic($class-name, $module) {
         #{$property}: $value;
       }
     }
