--- a/src/classes/_hu-flex-direction.scss
+++ b/src/classes/_hu-flex-direction.scss
@@ -4,7 +4,7 @@
     $property: flex-direction;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-flex-direction-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
