--- a/src/classes/_hu-font-family.scss
+++ b/src/classes/_hu-font-family.scss
@@ -4,7 +4,7 @@
     $property: font-family;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-font-family-types) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
