--- a/src/classes/_hu-list-style.scss
+++ b/src/classes/_hu-list-style.scss
@@ -4,7 +4,7 @@
     $property: list-style;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-list-style-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
