--- a/src/classes/_hu-max-width.scss
+++ b/src/classes/_hu-max-width.scss
@@ -4,7 +4,7 @@
     $property: max-width;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-max-width-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
