--- a/src/classes/_hu-overscroll.scss
+++ b/src/classes/_hu-overscroll.scss
@@ -5,7 +5,7 @@
     $property: overscroll-behavior;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-overscroll-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
