--- a/src/classes/_hu-position.scss
+++ b/src/classes/_hu-position.scss
@@ -4,7 +4,7 @@
     $property: position;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-position-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
