--- a/src/classes/_hu-table-border.scss
+++ b/src/classes/_hu-table-border.scss
@@ -5,7 +5,7 @@
     $property: border-collapse;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-table-border-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
