--- a/src/classes/_hu-text-case.scss
+++ b/src/classes/_hu-text-case.scss
@@ -5,7 +5,7 @@
     $property: text-transform;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-text-case-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
