--- a/src/classes/_hu-text-decoration.scss
+++ b/src/classes/_hu-text-decoration.scss
@@ -4,7 +4,7 @@
     $property: text-decoration;
     $value: if($value, $value, $type);
 
-    @include hu-generic($class-name, $module, $hu-text-decoration-modules) {
+    @include hu-generic($class-name, $module) {
       #{$property}: $value;
     }
   }
