Added theming support for bg|border-color

--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -54,6 +54,9 @@
 @import "hu-text-align";
 @import "hu-text-case";
 @import "hu-text-decoration";
+@import "hu-theme-bg-color";
+@import "hu-theme-border-color";
+@import "hu-theme-color";
 @import "hu-transition-delay";
 @import "hu-transition-duration";
 @import "hu-transition-property";
