--- a/src/mixins/_index.scss
+++ b/src/mixins/_index.scss
@@ -15,3 +15,5 @@
 @import "hu-responsive-group-state";
 @import "hu-responsive-state";
 @import "hu-state";
+@import "hu-theme";
+@import "hu-theme-responsive";
