add append and prepend functions

--- a/src/functions/_index.scss
+++ b/src/functions/_index.scss
@@ -1,9 +1,11 @@
+@import "hu-append";
 @import "hu-class-name";
 @import "hu-escape-class-name";
 @import "hu-em";
 @import "hu-format-modules";
 @import "hu-get";
 @import "hu-log-error";
+@import "hu-prepend";
 @import "hu-rem";
 @import "hu-remove-list-duplicates";
 @import "hu-shade";
