--- a/src/variables/classes/_hu-z-index.scss
+++ b/src/variables/classes/_hu-z-index.scss
@@ -1,19 +1,19 @@
 $hu-z-index-modules: (base, hocus, group-hover, group-state, state) !default;
 
 $hu-z-index-types: (
-  auto,
-  inherit,
-  -1,
-  0,
-  100,
-  200,
-  300,
-  400,
-  500,
-  600,
-  700,
-  800,
-  900,
-  1000,
-  9999,
+  auto: auto,
+  inherit: inherit,
+  n1: -1,
+  0: 0,
+  100: 100,
+  200: 200,
+  300: 300,
+  400: 400,
+  500: 500,
+  600: 600,
+  700: 700,
+  800: 800,
+  900: 900,
+  1000: 1000,
+  9999: 9999,
 ) !default;
