Added letter-spacing, reset tweaks & stripping duplicate words in class names

--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -28,6 +28,7 @@
 @import "hu-height";
 @import "hu-justify-content";
 @import "hu-justify-items";
+@import "hu-letter-spacing";
 @import "hu-line-height";
 @import "hu-list-style";
 @import "hu-margin";
