--- a/src/functions/_index.scss
+++ b/src/functions/_index.scss
@@ -8,6 +8,7 @@
 @import "hu-prepend";
 @import "hu-rem";
 @import "hu-remove-list-duplicates";
+@import "hu-remove-string-duplicates";
 @import "hu-shade";
 @import "hu-string-replace";
 @import "hu-strip-unit";
