refactor some global vars to aid overrides. define project scaffold order

--- a/src/variables/classes/_hu-border-color.scss
+++ b/src/variables/classes/_hu-border-color.scss
@@ -2,4 +2,4 @@ $hu-border-color-modules: $hu-border-modules !default;
 
 $hu-border-color-sides: $hu-border-sides !default;
 
-$hu-border-color-types: $hu-bg-color-types !default;
+$hu-border-color-types: $hu-colors !default;
