--- a/src/variables/classes/_hu-padding.scss
+++ b/src/variables/classes/_hu-padding.scss
@@ -1,6 +1,6 @@
-$hu-padding-modules: $hu-margin-modules !default;
+$hu-padding-modules: $hu-spacing-modules !default;
 
-$hu-padding-scale: $hu-margin-scale !default;
+$hu-padding-scale: $hu-spacing-scale !default;
 
 $hu-padding-types: (
   padding: padding,
