--- a/src/variables/classes/_hu-theme-border-color.scss
+++ b/src/variables/classes/_hu-theme-border-color.scss
@@ -1,5 +1,5 @@
-$hu-theme-border-color-modules: $hu-border-color-modules !default;
+$hu-theme-border-color-modules: $hu-border-modules !default;
 
-$hu-theme-border-color-sides: $hu-border-color-sides !default;
+$hu-theme-border-color-sides: $hu-border-sides !default;
 
-$hu-theme-border-color-types: $hu-border-color-types !default;
+$hu-theme-border-color-types: $hu-themes !default;
