--- a/src/variables/classes/_hu-color.scss
+++ b/src/variables/classes/_hu-color.scss
@@ -1,3 +1,3 @@
 $hu-color-modules: $hu-bg-color-modules !default;
 
-$hu-color-types: $hu-bg-color-types !default;
+$hu-color-types: $hu-colors !default;
