--- a/src/variables/classes/_hu-theme-color.scss
+++ b/src/variables/classes/_hu-theme-color.scss
@@ -1,3 +1,3 @@
 $hu-theme-color-modules: $hu-theme-bg-color-modules !default;
 
-$hu-theme-color-types: $hu-theme-bg-color-types !default;
+$hu-theme-color-types: $hu-themes !default;
