--- a/src/variables/global/_index.scss
+++ b/src/variables/global/_index.scss
@@ -1,6 +1,8 @@
 @import "hu-breakpoints";
 @import "hu-colors";
+@import "hu-border";
 @import "hu-escape-class-name-types";
 @import "hu-namespace";
+@import "hu-spacings";
 @import "hu-states";
 @import "hu-themes";
