--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -49,6 +49,8 @@
 @import "hu-pointer-events";
 @import "hu-pos";
 @import "hu-position";
+@import "hu-rotate";
+@import "hu-scale";
 @import "hu-scroll-behavior";
 @import "hu-svg-fill-color";
 @import "hu-svg-fill-rule";
@@ -66,6 +68,8 @@
 @import "hu-transition-duration";
 @import "hu-transition-property";
 @import "hu-transition-easing";
+@import "hu-translate-x";
+@import "hu-translate-y";
 @import "hu-truncate-text";
 @import "hu-vertical-align";
 @import "hu-visibility";
